--- a/responsive.css
+++ b/responsive.css
@@ -19,6 +19,10 @@
         flex-direction: row;
     }
 
+    #menu ul li{
+        font-size: 15px;
+    }
+
     /*SECCION - VIDEO*/
 
     #video{
