min-width:1024px

--- a/styles_mobile_first.css
+++ b/styles_mobile_first.css
@@ -186,6 +186,7 @@ input[type="submit"]{
 .caja-flex{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
