--- a/responsive.css
+++ b/responsive.css
@@ -60,9 +60,7 @@
     /*CONTENIDO*/
 
     .caja-flex{
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 1fr;
+        flex-direction: row;
         width: 80%;
     }
 
@@ -106,4 +104,24 @@
         margin-top: 0em;
     }
 }
+
+@media (min-width:1024px) {
+    
+    #video{
+        width: 60%;
+    }
+
+    .login{
+        width: 60%;
+    }
+
+    #form input{
+        width: 60%;
+    }
+
+    .caja-flex{
+        width: 60%;
+    }
+}
+
 
